--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#receitas">Receitas</a></li>
                 <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <li><a href="/contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
