Criação da Página da Receita

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
         <h2>Receitas</h2>
         <div class="recipe-container">
             <div class="recipe-card">
-                <img src="miojo.jpg" alt="Miojo">
+                <img src="images/miojo.jpg" alt="Miojo">
                 <h3>Miojo</h3>
                 <button onclick="window.location.href='macarrao.html'">Ver Mais</button>
             </div>
             <div class="recipe-card">
-                <img src="pao.jpg" alt="Pão">
+                <img src="images/pao.jpg" alt="Pão">
                 <h3>Pão com Ovo</h3>
                 <button onclick="window.location.href='salada.html'">Ver Mais</button>
             </div>
             <div class="recipe-card">
-                <img src="pipoca.jpg" alt="Pipoca">
+                <img src="images/pipoca.jpg" alt="Pipoca">
                 <h3>Pipoca</h3>
                 <button onclick="window.location.href='bolo.html'">Ver Mais</button>
             </div>
@@ -56,7 +56,7 @@
                 <p>Preparar suas próprias refeições vai além de apenas satisfazer a fome; é uma experiência que oferece inúmeros benefícios tanto para o corpo quanto para o cérebro. Cozinhar envolve criatividade, habilidade e a capacidade de tomar decisões sobre o que consumir. Ao preparar suas refeições, você tem total controle sobre os ingredientes e as opções alimentares, podendo escolher alimentos frescos e nutritivos que contribuem diretamente para uma vida mais saudável.</p>
             </div>
             <div class="benefits-image">
-                <img src="cozinha.jpg" alt="Cozinha" />
+                <img src="images/cozinha.jpg" alt="Cozinha" />
             </div>
         </div>
     </section>
