melhorias na página de receita

--- a/contato.html
+++ b/contato.html
@@ -14,10 +14,10 @@
                 <h2>AliMente</h2>
             </div>
             <ul class="nav-links">
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#about">Sobre</a></li>
                 <li><a href="#recipes">Receitas</a></li>
-                <li><a href="#contact">Contato</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
