--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AliMente - Cozinhe e Alimente o Cérebro</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="home-styles.css">
 </head>
 <body>
     <header>
@@ -13,10 +13,10 @@
                 <h2>AliMente</h2>
             </div>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#receitas">Receitas</a></li>
                 <li><a href="#sobre">Sobre</a></li>
-                <li><a href="/contato.html">Contato</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -32,9 +32,9 @@
         <h2>Receitas</h2>
         <div class="recipe-container">
             <div class="recipe-card">
-                <img src="images/miojo.jpg" alt="Miojo">
-                <h3>Miojo</h3>
-                <button onclick="window.location.href='macarrao.html'">Ver Mais</button>
+                <img src="images/WhatsApp Image 2024-11-10 at 14.49.38.jpeg" alt="Miojo">
+                <h3>Panqueca Recheada</h3>
+                <button onclick="window.location.href='receita1.html'">Ver Mais</button>
             </div>
             <div class="recipe-card">
                 <img src="images/pao.jpg" alt="Pão">
