Criação da Logo e Inserção de Mídia

--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                <h2>AliMente</h2>
+                <img src="images/logo.png" alt="logo">
             </div>
             <ul class="nav-links">
                 <li><a href="home.html">Home</a></li>
@@ -21,14 +21,13 @@
             </ul>
         </nav>
     </header>
-
  
-    <section id="contact" class="contact-section">
+    <section id="contact" class="contact-section scroll-item">
         <div class="contact-content">
-            <h2>Contato</h2>
-            <p>Preencha o formulário abaixo para entrar em contato conosco!</p>
+            <h2 class="scroll-item">Contato</h2>
+            <p class="scroll-item">Preencha o formulário abaixo para entrar em contato conosco!</p>
 
-            <form class="contact-form">
+            <form class="contact-form scroll-item">
                 <div class="form-group">
                     <label for="name">Nome</label>
                     <input type="text" id="name" placeholder="Seu Nome" required>
@@ -49,5 +48,7 @@
     <footer>
         <p>&copy; 2024 Minha Empresa. Todos os direitos reservados.</p>
     </footer>
+
+    <script src="script.js"></script> 
 </body>
 </html>
