--- a/home.html
+++ b/home.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AliMente - Cozinhe e Alimente o Cérebro</title>
+    <title>Bite&Byte</title>
     <link rel="stylesheet" href="home-styles.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <h2>AliMente</h2>
+                <img src="images/logo.png" alt="logo">
             </div>
             <ul class="nav-links">
                 <li><a href="home.html">Home</a></li>
@@ -23,8 +23,8 @@
 
     <section id="hero" class="hero-section scroll-item">
         <div class="hero-content">
-            <h1>AliMente</h1>
-            <p>Cozinha que alimenta o corpo e o cérebro</p>
+            <img src="images/logo.png" alt="logo">
+            <p>Receitas para alimentar o corpo e o coração</p>
         </div>
     </section>
 
@@ -53,7 +53,12 @@
         <div class="benefits">
             <div class="benefits-text">
                 <h2>Benefícios de Cozinhar</h2>
-                <p>Preparar suas próprias refeições vai além de apenas satisfazer a fome; é uma experiência que oferece inúmeros benefícios tanto para o corpo quanto para o cérebro. Cozinhar envolve criatividade, habilidade e a capacidade de tomar decisões sobre o que consumir. Ao preparar suas refeições, você tem total controle sobre os ingredientes e as opções alimentares, podendo escolher alimentos frescos e nutritivos que contribuem diretamente para uma vida mais saudável.</p>
+                <p>Ei, já parou pra pensar que cozinhar é tipo um superpoder? Além de ser mega divertido, é a chance de criar sua própria
+                    'obra-prima gastronômica'. E cá entre nós, é muito mais barato do que aquela pizza delivery que chega te seduzindo.
+                    Sem contar que, ao invés de esperar a comida chegar fria e com a cara do 'não sei se vai ser bom', você coloca a mão na massa
+                    e faz o rolê ser muito mais saboroso e saudável. Cozinhar é liberdade: você escolhe o que vai colocar no prato, do jeito que
+                    gosta. E, de quebra, ainda pode chamar a galera pra uma noite de 'chef' e impressionar todo mundo com seus dotes culinários.
+                    Vem, junte-se ao time <i><strong>Bite&Byte</strong></i> e descubra que, no final das contas, é mais gostoso, mais barato eainda mais divertido!</p>
             </div>
             <div class="benefits-image">
                 <img src="images/cozinha.jpg" alt="Cozinha" />
