--- a/receita1.html
+++ b/receita1.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="logo">
-                <h2>AliMente</h2>
+                <img src="images/logo.png" alt="logo">
             </div>
             <ul class="nav-links">
                 <li><a href="home.html">Home</a></li>
@@ -48,28 +48,55 @@
         </div>
     </section>
 
+    <div class="audio-description">
+        <h3>Áudio de Descrição</h3>
+        <audio controls>
+            <source src="audio-descricao.mp3" type="audio/mpeg">
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+    </div>
+
     <section class="notebook">
         <div class="page left scroll-item">
             <h3>Ingredientes</h3>
             <ul id="ingredients-list">
-                <li class="scroll-item">1 1/2 xícara de chá de leite</li>
-                <li class="scroll-item">1 xícara de chá de farinha de trigo</li>
+                <strong>MASSA:</strong> <br><br>
+                <li class="scroll-item">1 e meia xícara (chá) de leite (300 ml)</li>
                 <li class="scroll-item">2 ovos</li>
-                <li class="scroll-item">1 colher de café de sal</li>
-                <li class="scroll-item">1 colher de chá de manteiga ou óleo para untar a frigideira</li>
+                <li class="scroll-item">1 e meia xícara (chá) de farinha de trigo</li>
+                <li class="scroll-item">1 sachê de tempero em pó de carne</li>
+                <li class="scroll-item">1 pitada de sal</li>
+                <br>
+                <strong>RECHEIO:</strong> <br><br>
+                <li class="scroll-item">1 colher (sopa) de margarina</li>
+                <li class="scroll-item">3 dentes de alho triturado</li>
+                <li class="scroll-item">1 cebola média picada</li>
+                <li class="scroll-item">1kg de paleta bovina moído</li>
+                <li class="scroll-item">2 colheres (chá) de páprica picante</li>
+                <li class="scroll-item">1 pitada de sal</li>
+                <li class="scroll-item">3 colheres (sopa) de extrato de tomate</li>
+                <br>
+                <strong>COBERTURA:</strong> <br><br>
+                <li class="scroll-item">300g de queijo mussarela</li>
+                <li class="scroll-item">2 colheres de extrato de tomate (em cada panqueca)</li>
+                <li class="scroll-item">1 pitada de orégano (em cada panqueca)</li>
             </ul>
         </div>
         <div class="page right scroll-item">
             <h3>Modo de preparo</h3>
             <ol id="preparation-list" class="numbered-list">
                 <li class="scroll-item">Misture os ingredientes da massa até ficar bem homogênea.</li>
-                <li class="scroll-item">Em uma frigideira média, de 20 cm, despeje um pouco de óleo, espalhe no fogo quente e despeje 1/2 concha da mistura.</li>
-                <li class="scroll-item">Gire a frigideira até a mistura ficar bem espalhada na mesma e abaixe o fogo.</li>
+                <li class="scroll-item">Em uma frigideira média, de 20 cm, despeje um pouco de óleo, espalhe no fogo
+                    quente e despeje 1/2 concha da mistura.</li>
+                <li class="scroll-item">Gire a frigideira até a mistura ficar bem espalhada na mesma e abaixe o fogo.
+                </li>
                 <li class="scroll-item">Frite as panquecas dos dois lados.</li>
-                <li class="scroll-item">Refogue a carne moída, acrescente a cebola ralada e o molho de tomate e 2 copos americanos de água, e deixe engrossar um pouco.</li>
+                <li class="scroll-item">Refogue a carne moída, acrescente a cebola ralada e o molho de tomate e 1 copo
+                    americano de água, e deixe engrossar um pouco.</li>
                 <li class="scroll-item">Em um prato, recheie as panquecas com carne moída, evitando tirar o caldo.</li>
                 <li class="scroll-item">Enrole-as e coloque uma ao lado da outra em um refratário.</li>
-                <li class="scroll-item">Despeje o molho que sobrou por cima e polvilhe com o queijo ralado.</li>
+                <li class="scroll-item">Espalhe o molho de tomate por cima e coloque uma fatia de queijo mussarela de
+                    cada panqueca.</li>
                 <li class="scroll-item">Leve ao forno até o queijo derreter um pouco.</li>
                 <li class="scroll-item">Servir quente.</li>
             </ol>
@@ -91,11 +118,10 @@
                     <img src="images/panqueca3.jpg" alt="Panqueca 3" class="carousel-image">
                 </div>
                 <div class="carousel-item">
-                    <iframe class="carousel-video" src="https://www.youtube.com/embed/4nw62y98lN0?si=TT-0emRY9i8myIqd"
+                    <iframe class="carousel-video" src="https://www.youtube.com/embed/wJ852hbMOt0?si=53FAtX8LoqCgYDD1"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                    </iframe>
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </div>
             <button class="carousel-control next"><img src="images/seta dir.svg" alt="proximo"></button>
