pagína geral de receitas

--- a/contato.html
+++ b/contato.html
@@ -15,8 +15,8 @@
             </div>
             <ul class="nav-links">
                 <li><a href="home.html">Home</a></li>
-                <li><a href="#about">Sobre</a></li>
-                <li><a href="#recipes">Receitas</a></li>
+                <li><a href="receitas.html">Receitas</a></li>
+                <li><a href="#sobre">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
@@ -46,7 +46,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Minha Empresa. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Bite&Byte. Todos os direitos reservados.</p>
     </footer>
 
     <script src="script.js"></script> 
