--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="home.html">Home</a></li>
-                <li><a href="#receitas">Receitas</a></li>
+                <li><a href="receitas.html">Receitas</a></li>
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
@@ -67,7 +67,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 AliMente. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Bite&Byte. Todos os direitos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
