--- a/receita1.html
+++ b/receita1.html
@@ -16,7 +16,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="home.html">Home</a></li>
-                <li><a href="#">Receitas</a></li>
+                <li><a href="receitas.html">Receitas</a></li>
                 <li><a href="#">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
@@ -24,7 +24,7 @@
     </header>
 
     <div class="breadcrumb scroll-item">
-        <a href="index.html">Receitas</a> / Panqueca Recheada
+        <a href="receitas.html">Receitas</a> / Panqueca Recheada
     </div>
 
     <section class="recipe-header">
@@ -129,7 +129,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 AliMente. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Bite&Byte. Todos os direitos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
