--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
             <ul class="nav-links">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="receitas.html">Receitas</a></li>
-                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
